# JUSTINA_NN

./: .gitmodules  README.md
catkin_ws/: bad.list
catkin_ws/src/face_age_gender/: CMakeLists.txt  package.xml
catkin_ws/src/face_age_gender/launch/: face_age_gender.launch
catkin_ws/src/face_age_gender/scripts/: face_age_gender_node.py
catkin_ws/src/face_age_gender_node/: CMakeLists.txt  package.xml
catkin_ws/src/face_recog/: CMakeLists.txt  package.xml
catkin_ws/src/face_recog/launch/: face_recognition.launch
catkin_ws/src/face_recog/msg/: VisionFaceObjects.msg
catkin_ws/src/face_recog/scripts/: examaple.py  example2.py  face_recognition_node.py
catkin_ws/src/face_recog/srv/: FaceRecognition.srv
catkin_ws/src/facenet/: CMakeLists.txt  package.xml
catkin_ws/src/facenet/launch/: facenet.launch
catkin_ws/src/facenet/scripts/: face_recognition.py  facenet_node.py
catkin_ws/src/facenet_ros/: CMakeLists.txt  package.xml
catkin_ws/src/facenet_ros/launch/: facenet.launch
catkin_ws/src/facenet_ros/msg/: VisionFaceObjects.msg
catkin_ws/src/facenet_ros/scripts/: face_recognition.py  face_recognition_classifier.py  facenet_jetson.py  facenet_node.py
catkin_ws/src/facenet_ros/srv/: FaceRecognition.srv
catkin_ws/src/justina_nn_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/justina_nn_msgs/msg/: OpenPoseRecognition.msg  OpenPoseRecognitions.msg  VisionFaceObjects.msg
catkin_ws/src/justina_nn_msgs/srv/: FaceRecognition.srv  OpenPoseRecognize.srv
catkin_ws/src/mask_rcnn/: CMakeLists.txt  package.xml
catkin_ws/src/mask_rcnn/config/: biorobotica2019_rcnn_mobilenetv1_coco.yaml  mask_rcnn_mobilenetv1_coco.yaml  mask_rcnn_mobilenetv1_objects2019.yaml  mask_rcnn_resnet101_coco.yaml  mask_rcnn_resnet50_coco.yaml  mask_rcnn_resnet50_objects2019.yaml
catkin_ws/src/mask_rcnn/launch/: mask_rcnn.launch
catkin_ws/src/mask_rcnn/script/: mask_rcnn_node.py
catkin_ws/src/openpose/: CMakeLists.txt  package.xml
catkin_ws/src/openpose/config/: ros.yaml
catkin_ws/src/openpose/include/openpose/: OpenPose.hpp
catkin_ws/src/openpose/launch/: openpose.launch
catkin_ws/src/openpose/src/: OpenPose.cpp  open_pose_node.cpp
catkin_ws/src/openpose_node/: CMakeLists.txt  package.xml
catkin_ws/src/openpose_node/src/: OpenPose.cpp  open_pose_node.cpp
catkin_ws/src/ros_darknet/: CMakeLists.txt  CMakeLists.txt#  package.xml
catkin_ws/src/ros_darknet/src/: demo.cpp  demo.hpp  image.h  image_interface.c  yolo_node.cpp
catkin_ws/src/tensor_flow/: CMakeLists.txt  package.xml
catkin_ws/src/tensor_flow/scripts/: label_image.py  send_cvmat_test.py  tf_label_obj_service.py
catkin_ws/src/tensor_flow/src/: send_image_test.cpp
catkin_ws/src/vision_msgs/: CMakeLists.txt  package.xml
